--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -100,6 +100,112 @@ config CPU_FREQ_DEFAULT_GOV_CONSERVATIVE
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_BIOSHOCK
+ 	bool "BioShock"
+ 	select CPU_FREQ_GOV_BIOSHOCK
+ 	help
+ 	  Default governor of BioShock kernel
+ 
+config CPU_FREQ_DEFAULT_GOV_ALUCARD
+ 	bool "alucard"
+ 	select CPU_FREQ_GOV_ALUCARD
+ 	help
+ 	  Use the CPUFreq governor 'interactive' as default.
+ 
+config CPU_FREQ_DEFAULT_GOV_ELEMENTALX
+ 	bool "elementalx"
+ 	select CPU_FREQ_GOV_ELEMENTALX
+ 	select CPU_FREQ_GOV_PERFORMANCE
+ 	help
+ 	  Use the CPUFreq governor 'elementalx' as default.
+ 
+config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
+ 	bool "pegasusq"
+ 	select CPU_FREQ_GOV_PEGASUSQ
+ 	help
+ 	  Use the CPUFreq governor 'pegasusq' as default.
+ 
+config CPU_FREQ_DEFAULT_GOV_DARKNESS
+ 	bool "darkness"
+ 	select CPU_FREQ_GOV_DARKNESS
+ 	help
+ 	  Use the CPUFreq governor 'darkness' as default.
+ 
+config CPU_FREQ_DEFAULT_GOV_IMPULSE
+ 	bool "impulse"
+ 	select CPU_FREQ_GOV_IMPULSE
+ 	help
+ 	  Use the CPUFreq governor 'impulse' as default.
+ 
+config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
+ 	bool "nightmare"
+ 	select CPU_FREQ_GOV_NIGHTMARE
+ 	help
+ 
+config CPU_FREQ_DEFAULT_GOV_ABYSSPLUGV2
+        bool "abyssplugv2"
+        select CPU_FREQ_GOV_ABYSSPLUG
+        select CPU_FREQ_GOV_PERFORMANCE
+        ---help---
+          Use the CPUFreq governor 'abyssplugv2' as default. This allows you
+          to get a full dynamic frequency capable system with CPU
+          hotplug support by simply loading your cpufreq low-level
+          hardware driver. Be aware that not all cpufreq drivers
+          support the hotplug governor. If unsure have a look at
+          the help section of the driver. Fallback governor will be the
+          performance governor.
+ 
+config CPU_FREQ_DEFAULT_GOV_ADAPTIVE
+ 	bool "adaptive"
+ 	select CPU_FREQ_GOV_ADAPTIVE
+ 	---help---
+ 	  Use the CPUFreq governor 'adaptive' as default. This allows
+ 	  you to get a full dynamic cpu frequency capable system by simply
+ 	  loading your cpufreq low-level hardware driver, using the
+ 	  'adaptive' governor for latency-sensitive workloads and demanding
+ 	  performance.
+ 
+config CPU_FREQ_DEFAULT_GOV_LIONHEART
+ 	bool "lionheart"
+ 	select CPU_FREQ_GOV_LIONHEART
+
+config CPU_FREQ_DEFAULT_GOV_DANCEDANCE
+	bool "dancedance"
+	select CPU_FREQ_GOV_DANCEDANCE
+
+config CPU_FREQ_DEFAULT_GOV_HYPER
+	bool "hyper"
+	select CPU_FREQ_GOV_HYPER
+	---help---
+	  Use the CPUFreq governor 'hyper' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'hyper' governor for latency-sensitive workloads.
+
+config CPU_FREQ_DEFAULT_GOV_LAZY
+	bool "lazy"
+	select CPU_FREQ_GOV_LAZY
+	select CPU_FREQ_GOV_PERFORMANCE
+
+config CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS
+	bool "ondemandplus"
+	select CPU_FREQ_GOV_ONDEMANDPLUS
+	select CPU_FREQ_GOV_PERFORMANCE
+	---help---
+	 Use the CPUFreq governor 'ondemandplus' as default. This allows
+	 you to get a full dynamic frequency capable system by simply
+	 loading your cpufreq low-level hardware driver.
+	 Be aware that not all cpufreq drivers support the ondemandplus
+	 governor. If unsure have a look at the help section of the
+	 driver. Fallback governor will be the performance governor.
+
+config CPU_FREQ_DEFAULT_GOV_OPTIMAX
+	bool "optimax"
+	select CPU_FREQ_GOV_OPTIMAX
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the CPUFreq governor 'optimax' as default
+
 config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	bool "interactive"
 	select CPU_FREQ_GOV_INTERACTIVE
@@ -161,10 +267,133 @@ config CPU_FREQ_GOV_ONDEMAND
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called cpufreq_ondemand.
+	  For details, take a look at linux/Documentation/cpu-freq.
+	  If in doubt, say N.
+onfig CPU_FREQ_GOV_BIOSHOCK
+	tristate "'bioshock' cpufreq bioshock"
+	depends on CPU_FREQ
+	help
+	  'bioshock' - More aggressive version of conservative
+
+config CPU_FREQ_GOV_ALUCARD
+	tristate "'alucard' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	'alucard' - a custom governor.
+
+config CPU_FREQ_GOV_ELEMENTALX
+	tristate "'elementalx' cpufreq policy governor"
+	select CPU_FREQ_TABLE
+	help
+	  'elementalx' - This driver adds a dynamic cpufreq policy governor.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_elementalx.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_PEGASUSQ
+	tristate "'pegasusq' cpufreq policy governor"
+
+config CPU_FREQ_GOV_DARKNESS
+	tristate "'darkness' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_IMPULSE
+	tristate "'impulse' cpufreq policy governor"
+	help
+	  'impulse' - This driver adds a dynamic cpufreq policy governor
+	  designed for optimized balance between power and performance.
+
+	  If in doubt, say N.
+
+
+config CPU_FREQ_GOV_NIGHTMARE
+	tristate "'nightmare' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_ABYSSPLUGV2
+        tristate "'abyssplugv2' cpufreq governor"
+         depends on CPU_FREQ && NO_HZ && HOTPLUG_CPU
+         ---help---
+         'abyssplugv2' - this driver mimics the frequency scaling behavior
+         in 'ondemand', but with several key differences. First is
+         that frequency transitions use the CPUFreq table directly,
+         instead of incrementing in a percentage of the maximum
+         available frequency. Second 'abyssplug' will offline auxillary
+         CPUs when the system is idle, and online those CPUs once the
+         system becomes busy again. This last feature is needed for
+         architectures which transition to low power states when only
+         the "master" CPU is online, or for thermally constrained
+         devices.
+         If you don't have one of these architectures or devices, use
+         'ondemand' instead.
+         If in doubt, say N.
+
+config CPU_FREQ_GOV_ADAPTIVE
+	tristate "'adaptive' cpufreq policy governor"
+	---help---
+	  'adaptive' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads and also for demanding
+	  performance.
+
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  interactive workloads in loweset steady-state but to
+	  to reduce power consumption in middle operation level level up
+	  will be done in step by step to prohibit system from going to
+	  max operation level.
+  
+  	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_adaptive.
+  
+  	  For details, take a look at linux/Documentation/cpu-freq.
+  
+  	  If in doubt, say N.
+
+config CPU_FREQ_GOV_LIONHEART
+	tristate "'lionheart' cpufreq governor"
+
+config CPU_FREQ_GOV_DANCEDANCE
+	tristate "'dancedance' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_HYPER
+	tristate "'hyper' cpufreq governor"
+	depends on CPU_FREQ
+	---help---
+	  'hyper' - A tweaked "ondemand" based smart and smooth optimized governor!
+	
+	   If in doubt, say N.
+
+config CPU_FREQ_GOV_LAZY
+	tristate "'lazy' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_ONDEMANDPLUS
+	tristate "'ondemandplus' cpufreq policy governor"
+	select CPU_FREQ_TABLE
+	---help---
+	 'ondemandplus' - This driver adds a dynamic cpufreq policy
+	 governor. The governor does a periodic polling and
+	 changes frequency based on the CPU utilization.
+	 The support for this governor depends on CPU capability to
+	 do fast frequency switching (i.e, very low latency frequency
+	 transitions).
+
+	 To compile this driver as a module, choose M here: the
+	 module will be called cpufreq_ondemandplus.
+
+	 For details, take a look at linux/Documentation/cpu-freq.
+
+	 If in doubt, say N.
+
+
+config CPU_FREQ_GOV_OPTIMAX
+	tristate "'optimax' cpufreq policy governor"
+	select CPU_FREQ_TABLE
 
 config CPU_FREQ_GOV_INTERACTIVE
 	tristate "'interactive' cpufreq policy governor"
